# inf_project_Krzysztof_Sawicki

./: CMakeLists.txt  README.md  main.cpp
Headers/: Agent.h  City.h  Game.h  GameLoudObjects.h  GameNameHolder.h  GameObject.h  Instance.h  MagicAbility.h  MagicSchool.h  PlayerMagicSchool.h  Profession.h  Spell.h  Square.h  Task.h  Tavern.h  Teacher.h  TimeSpace.h  WorldSettings.h
Source/: Agent.cpp  City.cpp  Game.cpp  GameLoudObjects.cpp  GameNameHolder.cpp  GameObject.cpp  Instance.cpp  MagicAbility.cpp  MagicSchool.cpp  PlayerMagicSchool.cpp  Profession.cpp  RandomNumberGenerator.cpp  Spell.cpp  Square.cpp  Task.cpp  Tavern.cpp  Teacher.cpp  TimeSpace.cpp  WorldSettings.cpp
UI/Headers/: CustomClickableWidget.h  InfoPanel.h  ListItem.h  ListPanel.h  UIManager.h
UI/Source/: CustomClickableWidget.cpp  InfoPanel.cpp  ListItem.cpp  ListPanel.cpp  UIManager.cpp
